--- a/package.json
+++ b/package.json
@@ -1,1 +1,24 @@
+{
+  "name": "simula-mais-api",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node server.js",
+    "build": "npm install"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.6",
+    "sequelize": "^6.32.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
+    "joi": "^17.9.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
+}
 
